editors/tree-sitter-nib/grammar.js
    source_file: $ => repeat($._item),

    _item: $ => choice(
      $.import_declaration,
      $.function_definition,
      $.struct_declaration,
      $.enum_declaration,
      $.protocol_declaration,
      $.const_declaration,
      $.var_declaration,
      $.type_declaration,
      $.function_signature,
    ),

    function_definition: $ => seq(
      repeat($.attribute),
      optional($.visibility),
      $._function_header,
      suite($, 'body'),
    ),

    _function_header: $ => seq(
      'fn',
      optional(seq(field('type', choice($.primitive_type, alias($.identifier, $.type_identifier))), '.')),
      field('name', $.identifier),
      optional(field('type_parameters', $.type_parameters)),
      field('parameters', $.parameters),
      optional(seq('->', field('return_type', $._type))),
    ),

    parameters: $ => seq('(', commaSep($.parameter), optional(','), ')'),

    block: $ => seq(repeat1($._statement), $._dedent),

    _statement: $ => choice(
      $.let_statement,
      $.const_declaration,
      $.function_definition,
      $.expression_statement,
      $.assignment_statement,
      $.return_statement,
      $.yield_statement,
      $.break_statement,
      $.continue_statement,
      $.if_statement,
      $.while_statement,
      $.loop_statement,
      $.for_statement,
      $.match_statement,
      $.with_statement,
      $.unsafe_statement,
      $.asm_statement,
    ),

    let_statement: $ => seq(
      'let',
      optional('mut'),
      field('pattern', $._pattern),
      optional(seq(':', field('type', $._type))),
      '=',
      field('value', $._expression),
      choice($._newline, seq('else', suite($, 'alternative'))),
    ),

    expression_statement: $ => seq($._expression, $._newline),

    return_statement: $ => seq('return', optional($._expression), $._newline),

    with_statement: $ => seq(
      'with',
      optional('mut'),
      field('name', $.identifier),
      '=',
      field('value', $._expression),
      suite($, 'body'),
    ),

    unsafe_statement: $ => seq('unsafe', suite($, 'body')),

    // `asm(ah=0, out=(cx=let high), clobbers=[al, flags]):` and its raw lines.
    asm_statement: $ => seq(
      'asm',
      '(',
      commaSep(choice($.asm_input, $.asm_outputs, $.asm_clobbers)),
      optional(','),
      ')',
      ':',
      $.asm_body,
    ),

    asm_input: $ => seq(field('register', alias($.identifier, $.register)), '=', field('value', $._expression)),

    asm_outputs: $ => seq('out', '=', '(', commaSep($.asm_output), optional(','), ')'),

    asm_output: $ => seq(
      field('register', alias($.identifier, $.register)),
      '=',
      field('target', choice(seq('let', optional('mut'), $.identifier), $._expression)),
    ),

    asm_clobbers: $ => seq('clobbers', '=', '[', commaSep(alias($.identifier, $.register)), optional(','), ']'),

    // Patterns (spec section 6)

    _pattern: $ => choice(
      $.identifier,
      $._literal_pattern,
      $.tuple_pattern,
      $.struct_pattern,
      $.variant_pattern,
      $.sequence_pattern,
    ),

    _type: $ => choice(
      $._simple_type,
      $.tuple_type,
      $.generic_type,
      $.array_type,
    ),

    primitive_type: _ => choice(...PRIMITIVES),

    _expression: $ => choice(
      $.identifier,
      $.primitive_type,
      $.integer,
      $.float,
      $.char,
      $.string,
      $.fstring,
      $.true,
      $.false,
      $.variant_expression,
      $.parenthesized_expression,
      $.tuple_expression,
      $.array_expression,
      $.dict_expression,
      $.comprehension,
      $.dict_comprehension,
      $.generator_expression,
      $.unary_expression,
      $.borrow_expression,
      $.not_expression,
      $.binary_expression,
      $.conditional_expression,
      $.try_expression,
      $.call_expression,
      $.generic_call,
      $.index_expression,
      $.slice_expression,
      $.field_expression,
      $.lambda_expression,
    ),

    variant_expression: $ => seq('.', field('name', $.identifier)),

    unary_expression: $ => prec(PREC.unary, seq(
      field('operator', choice('-', '~', '*')),
      field('operand', $._expression),
    )),

    not_expression: $ => prec(PREC.not, seq('!', field('operand', $._expression))),

    binary_expression: $ => {
      const table = [
        [PREC.or, '||'],
        [PREC.and, '&&'],
        [PREC.compare, choice('==', '!=', '<', '<=', '>', '>=', 'is', seq('is', 'not'))],
        [PREC.bit_or, '|'],
        [PREC.bit_xor, '^'],
        [PREC.bit_and, '&'],
        [PREC.shift, choice('<<', '>>')],
        [PREC.add, choice('+', '-')],
        [PREC.multiply, choice('*', '/', '//', '%')],
      ];
      return choice(...table.map(([precedence, operator]) => prec.left(precedence, seq(
        field('left', $._expression),
        field('operator', operator),
        field('right', $._expression),
      ))));
    },

    // `cond ? a : b`; the scanner tells this `?` from a propagating one.
    conditional_expression: $ => prec.right(PREC.ternary, seq(
      field('condition', $._expression),
      alias($._ternary_question, '?'),
      field('consequence', $._expression),
      ':',
      field('alternative', $._expression),
    )),

    try_expression: $ => prec(PREC.postfix, seq($._expression, alias($._try_question, '?'))),

    call_expression: $ => prec(PREC.postfix, seq(
      field('function', $._expression),
      field('arguments', $.arguments),
    )),

    // `Pair[u8, bool](first=7)`, `block.cast[u16]()`
    arguments: $ => seq('(', commaSep(choice($._expression, $.keyword_argument)), optional(','), ')'),

    index_expression: $ => prec(PREC.postfix, seq(
      field('value', $._expression),
      '[',
      commaSep1(field('index', $._expression)),
      optional(','),
      ']',
    )),

    integer: _ => token(choice(
      /0[xX][0-9a-fA-F_]+/,
      /0[bB][01_]+/,
      /0[oO][0-7_]+/,
      /[0-9]+/,
    )),

    escape_sequence: _ => token.immediate(choice(/\\x[0-9a-fA-F]{2}/, /\\[0nrt\\"{}]/)),

    string: $ => seq(
      '"',
      repeat(choice(alias(token.immediate(prec(1, /[^"\\\n]+/)), $.string_content), $.escape_sequence)),
      token.immediate('"'),
    ),

    fstring: $ => seq(
      'f"',
      repeat(choice(
        alias(token.immediate(prec(1, /[^"\\{}\n]+/)), $.string_content),
        $.escape_sequence,
        alias(token.immediate(choice('{{', '}}')), $.escape_sequence),
        $.interpolation,
      )),
      token.immediate('"'),
    ),

    interpolation: $ => seq(
      token.immediate('{'),
      field('value', $._expression),
      optional(seq(':', field('format', $.format_specifier))),
      '}',
    ),

    format_specifier: _ => token.immediate(/[^}"\n]+/),

    identifier: _ => /[a-zA-Z_][a-zA-Z0-9_]*/,
  },
});
